ingress-example-kodekloud/ingress-example-kodekloud.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  name: default-backend
  namespace: apps-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-backend
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: default-backend
    spec:
      containers:
      - image: kodekloud/ecommerce:404
        imagePullPolicy: Always
        name: simple-webapp
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-video
  namespace: apps-space
  uid: 8cab27c4-6f59-4b15-bb79-1a70d7d88552
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: webapp-video
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webapp-video
    spec:
      containers:
      - image: kodekloud/ecommerce:video
        imagePullPolicy: Always
        name: simple-webapp
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-05-23T16:22:20Z"
  name: default-http-backend
  namespace: app-space
  resourceVersion: "2126"
  uid: f7c081cd-b43c-43a7-9c53-48ca4006bca7
spec:
  clusterIP: 10.107.165.97
  clusterIPs:
  - 10.107.165.97
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: default-backend
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-05-23T16:22:20Z"
  name: video-service
  namespace: app-space
  resourceVersion: "2109"
  uid: 71917102-90d0-4437-8ae6-e1ae6b07fb07
spec:
  clusterIP: 10.99.216.241
  clusterIPs:
  - 10.99.216.241
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webapp-video
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  creationTimestamp: "2022-05-23T16:22:22Z"
  generation: 1
  name: ingress-wear-watch
  namespace: apps-space
  resourceVersion: "2228"
  uid: 9392adf1-8ada-4736-a92a-bbab631f760c
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: video-service
            port:
              number: 8080
        path: /watch
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - {}
